--- a/app.json
+++ b/app.json
@@ -1,4 +1,5 @@
 {
     "name": "Small Sharp Tool",
-    "repository": "https://github.com/krk946528/herokudd",
+    "repository": "https://github.com/krk946528/herokudd"
+    
 }
